fix: wrapping of videos in playlist container

--- a/src/pages/Playlists/Playlist.css
+++ b/src/pages/Playlists/Playlist.css
@@ -25,6 +25,7 @@
 
 .playlist-video-container {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .playlist-video-card {
